--- a/ShipmentDataGrids.Lib/ShipmentDataGridControl.resx
+++ b/ShipmentDataGrids.Lib/ShipmentDataGridControl.resx
@@ -117,4 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="buttonExport.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAGOSURBVFhH7Zc9L8VQHIePEFyReAkTJoOEj0AsEqsIsbKxmexiMLBaBCshxGgT8RFE7NcgFkaT
+        4Pn1tNdLXW1Pj16R+yRP7ml7zr+/trftqUnBEj7jaw7v0IlpjHY+4+gmanxmxvAJb9CpQIhCZB4/jA94
+        gnNYaIA+LOMltqLTEXwg0/hOvMJr7NIKKCxAC17gLQ5oRUhhAQ7xEUeCpXcKC/CC6viduhVdSR1AnXTP
+        asBXx9EVjU8dQJ19Uw9QD/B/AkzhPapfHlVDtWJo408BNHAf1SePqqFaMZICJG1Pi2qoVgyXAB04hI3B
+        kjHtOGibpjf8jegJf70FWMRtXMYN1DziIFyeRb3c2lDoUb5im34C6MiPbLPCKOpd0hQs2fnkgm2aPfR6
+        BvTKXrfNT8zjKeoMKMgxduMuRngJoKnaGUbXvoTNtmkaUP90sYo7qAluhJcAYgK1oy1cQ10CnWrtcBJF
+        P57bZgVvAVxxDlDzB1HNH8WuqKZqJ/InAlSblOYx9cepPqHV8Tes8nluzBtwAuXiCSaK/AAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
 </root>
